--- a/user/user_avatar.html
+++ b/user/user_avatar.html
@@ -42,7 +42,7 @@
                 <!-- 通过accept属性可以指定允许用户选择说明类型的文件 -->
                 <input type="file" id="file" accept="image/png,image/jpeg">
                 <button type="button" class="layui-btn" id="btnChooseImage">上传</button>
-                <button type="button" class="layui-btn layui-btn-danger">确定</button>
+                <button type="button" class="layui-btn layui-btn-danger" id="btnupLoad">确定</button>
             </div>
         </div>
     </div>
@@ -50,6 +50,7 @@
 
     <script src="/assets/lib/layui/layui.all.js"></script>
     <script src="/assets/lib/jquery.js"></script>
+    <script src="/assets/js/baseAPI.js"></script>
     <script src="/assets/lib/cropper/Cropper.js"></script>
     <script src="/assets/lib/cropper/jquery-cropper.js"></script>
     <script src="/assets/js/user/user_avatar.js"></script>
