--- a/article/art_cate.html
+++ b/article/art_cate.html
@@ -41,8 +41,8 @@
         <td>{{$value.name}}</td>
         <td>{{$value.alias}}</td>
         <td>
-            <button type="button" class="layui-btn layui-btn-xs">编辑</button>
-            <button type="button" class="layui-btn layui-btn-danger layui-btn-xs">删除</button>
+            <button type="button" class="layui-btn layui-btn-xs" id="btn-edit" data-id={{$value.Id}}>编辑</button>
+            <button type="button" class="layui-btn layui-btn-danger layui-btn-xs" id="btn-delete" data-id={{$value.Id}}>删除</button>
         </td>
       </tr>
       {{/each}}
@@ -55,6 +55,7 @@
       <script src="/assets/lib/template-web.js"></script>
       <script src="/assets/js/article/art_cate.js"></script>
 
+      <!-- 添加文章类别 -->
       <script type="text/html"  id="dialog-add">
         <form class="layui-form" id="Addcate">
             <div class="layui-form-item">
@@ -79,6 +80,30 @@
 
     </script>
 
-     
+     <!-- 修改文章类别 -->
+    <script type="text/html"  id="dialog-edit">
+      <form class="layui-form" id="Editcate"  lay-filter="form-edit">
+        <!-- 隐藏文本域 -->
+        <input type="hidden" name="Id">
+          <div class="layui-form-item">
+            <label class="layui-form-label">分类名称</label>
+            <div class="layui-input-block">
+              <input type="text" name="name" required  lay-verify="required" placeholder="请输入分类名称" autocomplete="off" class="layui-input">
+            </div>
+          </div>
+          <div class="layui-form-item">
+              <label class="layui-form-label">分类别名</label>
+              <div class="layui-input-block">
+                <input type="text" name="alias" required  lay-verify="required" placeholder="请输入分类别名" autocomplete="off" class="layui-input">
+              </div>
+            </div>
+            <div class="layui-form-item">
+              <div class="layui-input-block">
+                <button class="layui-btn" lay-submit lay-filter="formDemo">确认修改</button>
+              </div>
+            </div>
+      </form>
+
+  </script>
 </body>
 </html>
