--- a/article/art_list.html
+++ b/article/art_list.html
@@ -60,13 +60,13 @@
       <script type="text/html" id="tpl-table">
         {{each data}}
         <tr>
-          <td>{{$value.Id}}</td>
-          <td>{{$value.name}}</td>
-          <td>fsf</td>
-          <td>{{$value.alias}}</td>
+          <td>{{$value.title}}</td>
+          <td>{{$value.cate_name}}</td>
+          <td>{{$value.pub_date|dataFormat}}</td>
+          <td>{{$value.state}}</td>
           <td>
             <button type="button" class="layui-btn layui-btn-xs">编辑</button>
-            <button type="button" class="layui-btn layui-btn-danger layui-btn-xs">删除</button>
+            <button type="button" class="layui-btn layui-btn-danger layui-btn-xs" id="btn-delete" data-id={{$value.Id}}>删除</button>
           </td>
         </tr>
         {{/each}}
